--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -486,7 +486,7 @@
 						<div class="col">
 							@if (item.Quantity > 1 && parentItem.BundlePerItemShoppingCart)
 							{
-								<span class="font-weight-medium">@item.Quantity&nbsp;&#215;</span>
+								<span class="font-weight-medium">@(item.Quantity)&nbsp;&#215;</span>
 							}
 							@if (item.VisibleIndividually)
 							{
