Update to my last commit

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
@@ -132,6 +132,31 @@
         		}
         	});
         });
+
+		// Bundle per item pricing
+        $(document).on('change', '#@Html.FieldIdFor(model => model.BundlePerItemPricing)', function () {
+        	bundlePerItemPricing($(this).is(':checked'));
+        });
+
+        bundlePerItemPricing(@(Model.BundlePerItemPricing.ToString().ToLower()));
+
+        function bundlePerItemPricing(isActive) {
+        	$('#TierPriceContainer').toggle(!isActive);
+        	$('#group-prices').find('.base-price').toggle(!isActive);
+        	$('a[href=#tab-discounts]').parent().toggle(!isActive);
+        }
+
+		// Bundle per item in shopping cart
+        $(document).on('change', '#@Html.FieldIdFor(model => model.BundlePerItemShoppingCart)', function () {
+        	bundlePerItemShoppingCart($(this).is(':checked'));
+        });
+
+        bundlePerItemShoppingCart(@(Model.BundlePerItemShoppingCart.ToString().ToLower()));
+
+        function bundlePerItemShoppingCart(isActive) {
+        	$('a[href=#tab-inventory]').parent().toggle(!isActive);
+        }
+
     });
 </script>
 
