--- a/src/Presentation/SmartStore.Web/Views/Boards/Partials/_ActiveTopics.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Partials/_ActiveTopics.cshtml
@@ -18,7 +18,7 @@
                 <h3 class="heading-title @(!isPartial ? "fs-h1" : "")">@T("Forum.ActiveDiscussions")</h3>
             </div>
         </div>
-        <div class="col col-auto">
+        <div class="col col-auto mb-3 mb-0-sm">
             @if (Model.ActiveDiscussionsFeedEnabled == true)
             {
                 <a class="btn btn-warning" href="@Url.Action("ActiveDiscussionsRSS")" title="@T("Forum.ActiveDiscussionsRSSLinkTitle")">
@@ -38,7 +38,7 @@
     </div>
 
     <div class="active-discussionstopics clearfix">
-        <table class="table">
+        <table class="table table-responsive">
             @if (Model.ForumTopics.Count > 0)
             {
                 <thead>
@@ -47,13 +47,13 @@
                         <th class="topic-name">
                             @T("Forum.TopicTitle")
                         </th>
-                        <th class="replies">
+                        <th class="replies d-none d-md-table-cell">
                             @T("Forum.Replies")
                         </th>
-                        <th class="views">
+                        <th class="views d-none d-md-table-cell">
                             @T("Forum.Views")
                         </th>
-                        <th class="last-post">
+                        <th class="last-post d-none d-md-table-cell">
                             @T("Forum.LatestPost")
                         </th>
                     </tr>
@@ -97,13 +97,13 @@
                             }
                         </div>
                     </td>
-                    <td class="replies">
+                    <td class="replies d-none d-md-table-cell">
                         @topic.NumReplies
                     </td>
-                    <td class="views">
+                    <td class="views d-none d-md-table-cell">
                         @topic.Views
                     </td>
-                    <td class="last-post">
+                    <td class="last-post d-none d-md-table-cell">
                         @{ Html.RenderAction("LastPost", new { forumPostId = topic.LastPostId, showTopic = false }); }
                     </td>
                 </tr>
