--- a/src/Presentation/SmartStore.Web/Views/Blog/Partials/BlogMonths.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/Partials/BlogMonths.cshtml
@@ -3,11 +3,11 @@
 
 @if (Model.Count > 0)
 {
-    <div class="block block-bordered block-blog-archive card">
-        <div class="block-title card-header">
+    <div class="block-blog-archive card mb-3">
+        <div class="card-header">
             @T("Blog.Archive")
         </div>
-        <div class="block-body listbox card-block">
+        <div class="listbox card-block">
             <ul id="blog-month-list" class="list-unstyled">
                 @foreach (var yearItem in Model)
                 {
