--- a/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ShipmentDetailsModel
+
 @using SmartStore.Core.Domain.Orders;
 @using SmartStore.Web.Models.Order;
 @using SmartStore.Services.Localization;
@@ -8,9 +9,10 @@
 
     Html.AddTitleParts(T("PageTitle.ShipmentDetails").Text);
 }
+
 <div class="page shipment-details">
     <div class="page-title">
-        <h1>@string.Format(T("Order.Shipments.Information").Text, Model.Id)</h1>
+        <h1 class="h3">@string.Format(T("Order.Shipments.Information").Text, Model.Id)</h1>
     </div>
 
     <div class="page-body">
